# databricks-cost-optimizer

./: .env.example  .gitignore  Dockerfile  GO_TO_MARKET.md  LINKEDIN_SALES_COPY.md  LONDON_PROSPECT_LIST.md  QUICK_START.md  README.md  SYSTEM_TABLES.md  diagnose.py  docker-compose.yml  pyproject.toml  requirements.txt  test_connection.py
.devcontainer/: Dockerfile  devcontainer.json
config/: default.yaml  pricing.yaml
examples/: sample_report.md
prompts/: create_project.md
src/: __init__.py  databricks_client.py  main.py
src/analyzers/: __init__.py  cluster_analyzer.py  cost_analyzer.py  job_analyzer.py  sql_analyzer.py
src/collectors/: __init__.py  cluster_collector.py  cluster_utilization_collector.py  job_collector.py  query_collector.py  usage_collector.py  warehouse_collector.py
src/recommendations/: __init__.py  recommendation_engine.py
src/reporting/: __init__.py  json_report.py  markdown_report.py
src/utils/: __init__.py  config.py  money.py
tests/: test_cost_calculation.py  test_databricks_connection.py
